--- a/MicroBiome/templates/about.html
+++ b/MicroBiome/templates/about.html
@@ -7,6 +7,7 @@ div.intro { font-size: 20px; }
   </style>
 {% endblock %}
 
+{% block title_rep %} About {% endblock %}
 
 {% block content %}
   <br />
