--- a/MicroBiome/static/css/custom.css
+++ b/MicroBiome/static/css/custom.css
@@ -1558,61 +1558,89 @@ div#klixoSlider_166 div.textContent {
   padding-left: 0px !important;
 }
 
+/* <<<<<<< HEAD */
 
-
-  /* 
+/*
   ######## css for background image######## */
-  .header_top_bg {
-    /* height: 100%; */
-    background: url("static/img/banners.jpeg");
-    /* width: 100%; */
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    /* background-attachment: fixed; */
-    min-height: 20vh;
-    margin-top: 0%;
-  }
+.header_top_bg {
+  /* height: 100%; */
+  background: url("static/img/banners.jpeg");
+  /* width: 100%; */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  /* background-attachment: fixed; */
+  min-height: 20vh;
+  margin-top: 0%;
+}
 
-  /* 
+/*
   ######## css for overlay text in top header ######## */
-  .header_top_bg .text_top_bg {
+.header_top_bg .text_top_bg {
+  color: #fff;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  text-transform: sentencecase;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 10px;
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+}
 
-    color: #fff;
+.page-footer_new {
+  background-color: #337ab7;
+  color: #ffffff !important;
+  /* position: initial; */
+  /* bottom: 0; */
+  /* width: 100%; */
+  /* height: 160px; */
+  /* padding: 20px 0px 0px 100px; */
+  /* flex-shrink: 0; */
+  margin-top: 30px;
+  font-size: 0.8em;
+}
+
+.panel {
+  border-radius: 0.3rem;
+  padding: 0.7rem;
+  margin-bottom: 0rem;
+  margin-right: 1rem;
+}
+/*=======*/
+/*Custom left pannel*/
+
+/* The sidebar menu */
+.sidenav {
+  position: fixed;
+  z-index: 1;
+  margin-top: 2em;
+  background: #eee;
+  overflow-x: hidden;
+  /* padding: 8px 0; */
+}
+
+.sidenav a {
+  padding: 10px 60px 10px 30px;
+  text-decoration: none;
+  font-size: 21px;
+  color: #2196f3;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #064579;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
     font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    text-transform: sentencecase;
-    background: rgba(0, 0, 0, 0.4);
-    padding: 10px;
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 10px;
-
   }
-
-
-
-  .page-footer_new {
-    background-color: #337ab7;
-    color: #ffffff !important;
-    /* position: initial; */
-    /* bottom: 0; */
-    /* width: 100%; */
-    /* height: 160px; */
-    /* padding: 20px 0px 0px 100px; */
-    /* flex-shrink: 0; */
-    margin-top: 30px;
-    font-size: 0.8em;
-  }
-
-
-
-  .panel {
-    border-radius: 0.3rem;
-    padding: 0.7rem;
-    margin-bottom: 0rem;
-    margin-right: 1rem;
-  }
+}
+/*>>>>>>> f28e10df (side bar in resources)*/
