--- a/MicroBiome/templates/resouces.html
+++ b/MicroBiome/templates/resouces.html
@@ -4,80 +4,120 @@
   <br />
   <br />
   <br />
-  <h3>Microbiome analysis tools</h3>
+  <div class="row">
 
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Resouces</th>
-        <th scope="col">Description</th>
-      </tr>
-    </thead>
+    <div class="col-md-3">
+      <div class="sidenav">
+        <a href="#analysis">Tools for Microbiome analysis</a>
+        <a href="#training">Training Materials</a>
+        <a href="#news">News and Events</a>
+      </div>
+    </div>
+    <div class="col-md-9">
+      <div id="analysis">
+        <h3>Microbiome analysis tools</h3>
 
-    <tbody>
-      <tr>
-        <td>
-          <a href="https://microsud.github.io/Tools-Microbiome-Analysis/">Tools for Microbiome analysis</a>
-        </td>
-        <td>R tools for 16S rRNA gene data analysis and visualization</td>
-      </tr>
-      <tr>
-        <td>
-          <a href="https://h3abionet.org/tools-and-services/workflows">16S workflow</a>
-        </td>
-        <td>H3ABioNet Guideline for Bioinformatic  and statistical analysis on 16S rDNA data</td>
-      </tr>
-  </table>
-  <br /><br />
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Resouces</th>
+              <th scope="col">Description</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>
+                <a href="https://microsud.github.io/Tools-Microbiome-Analysis/">Tools for Microbiome analysis</a>
+              </td>
+              <td>R tools for 16S rRNA gene data analysis and visualization</td>
+            </tr>
+            <tr>
+              <td>
+                <a href="https://h3abionet.org/tools-and-services/workflows">16S workflow</a>
+              </td>
+              <td>H3ABioNet Guideline for Bioinformatic  and statistical analysis on 16S rDNA data</td>
+            </tr>
+        </table>
+        <br /><br />
+      </div>
+
+      <div id="training">
+
+        <h3>Training Materials</h3>
+
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Resouces</th>
+              <th scope="col">Description</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="https://endpoints.elysiumhealth.com/microbiome-explainer-e345658db2c">The Complete Guide to the Science of the Microbiome
+                </a></td>
+                <td>An introduction to the microbiome science as well as an orientation text about many important/different research aspects</td>
+            </tr>
+            <tr>
+              <td><a href="http://www.mbiome.com/resources/websites/">Microbiome Therapeutics</a></td>
+              <td>It contains a useful websites related to the area of microbiome research</td>
+            </tr>
+            <tr>
+              <td><a href="https://www.nap.edu/read/24960/chapter/6">The National Academic Press</a></td>
+              <td>Current methods for studying human microbiome project- Human and environmental chemicals interactions characterisation.</td>
+            </tr>
+            <tr>
+              <td><a href="https://www.genome.gov/27552808/teaching-the-microbiome/">NIH: Teaching the microbiome</a></td>
+              <td>Collection of various Internet-based tools and resources for teaching the microbiome</td>
+            </tr>
+        </table>
+        <br /><br />
+      </div>
+
+      <div id="news">
+        <h4>News and Events</h4>
 
 
-  <h3>Training Materials</h3>
+        <h5>Upcoming and Current Training</h5>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Resouces</th>
+              <th scope="col">Description</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="https://www.h3abionet.org/categories/event/course/16srrna-microbiome-intermediate-bioinformatics-training-20211">16S rRNA Microbiome Intermediate Bioinformatics Training 2021</a></td>
+              <td>The H3ABioNet 16S rRNA Microbiome Intermediate Bioinformatics course will provide training to enable participants to gain the knowledge and skills to perform 16S rRNA microbiome data analyses using a variety of bioinformatics methods and tools.</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Resouces</th>
-        <th scope="col">Description</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><a href="https://endpoints.elysiumhealth.com/microbiome-explainer-e345658db2c">The Complete Guide to the Science of the Microbiome
-          </a></td>
-          <td>An introduction to the microbiome science as well as an orientation text about many important/different research aspects</td>
-      </tr>
-      <tr>
-        <td><a href="http://www.mbiome.com/resources/websites/">Microbiome Therapeutics</a></td>
-        <td>It contains a useful websites related to the area of microbiome research</td>
-      </tr>
-      <tr>
-        <td><a href="https://www.nap.edu/read/24960/chapter/6">The National Academic Press</a></td>
-        <td>Current methods for studying human microbiome project- Human and environmental chemicals interactions characterisation.</td>
-      </tr>
-      <tr>
-        <td><a href="https://www.genome.gov/27552808/teaching-the-microbiome/">NIH: Teaching the microbiome</a></td>
-        <td>Collection of various Internet-based tools and resources for teaching the microbiome</td>
-      </tr>
-  </table>
-  <br /><br />
-  <h4>News and Events</h4>
-
-
-  <h5>Upcoming and Current Training</h5>
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Resouces</th>
-        <th scope="col">Description</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><a href="https://www.h3abionet.org/categories/event/course/16srrna-microbiome-intermediate-bioinformatics-training-20211">16S rRNA Microbiome Intermediate Bioinformatics Training 2021</a></td>
-        <td>The H3ABioNet 16S rRNA Microbiome Intermediate Bioinformatics course will provide training to enable participants to gain the knowledge and skills to perform 16S rRNA microbiome data analyses using a variety of bioinformatics methods and tools.</td>
-      </tr>
-    </tbody>
-  </table>
-
-  {% comment %}<p>H3ABionet events will added here.</p>{% endcomment %}
+      {% comment %}<p>H3ABionet events will added here.</p>{% endcomment %}
+      <script>
+        $(document).ready(function(){
+                  $(".sidenav a").on('click', function(event) {
+                            // Make sure this.hash has a value before overriding default behavior
+                            if (this.hash !== "") {
+                                      // Prevent default anchor click behavior
+                                      event.preventDefault();
+                                      // Store hash
+                                      var hash = this.hash;
+                                      // Using jQuery's animate() method to add smooth page scroll
+                                      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+                                      $('html, body').animate({
+                                                scrollTop: $(hash).offset().top
+                                              }, 800, function(){
+                                                        // Add hash (#) to URL when done scrolling (default click behavior)
+                                                        window.location.hash = hash;
+                                                      });
+                                    } // End if
+                          });
+                });
+      </script>
+    </div>
+  </div>
 {% endblock %}
